[gd_scene load_steps=6 format=3 uid="uid://54n2ijfw2s2v"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_vdcsr"]
[ext_resource type="PackedScene" uid="uid://dpp1140due25a" path="res://scenes/player.tscn" id="1_wdkue"]
[ext_resource type="PackedScene" uid="uid://ibl1jubdl1an" path="res://scenes/map.tscn" id="2_fh3gm"]
[ext_resource type="PackedScene" uid="uid://clrervo6ig63f" path="res://scenes/game_over.tscn" id="4_7o7ka"]

[sub_resource type="Curve2D" id="Curve2D_wy1s7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -43.942, -81.7974, 0, 0, 0, 0, 2056, -70, 0, 0, 0, 0, 2044, 1153, 0, 0, 0, 0, -39.0264, 1157.92, 0, 0, 0, 0, -39.0264, -81.7974)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_vdcsr")

[node name="Map" parent="." instance=ExtResource("2_fh3gm")]

[node name="Player" parent="." instance=ExtResource("1_wdkue")]
position = Vector2(983, 577)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-1018.3, -575.798)
scale = Vector2(1.01717, 1.01717)
curve = SubResource("Curve2D_wy1s7")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-43.942, -81.7974)
rotation = 0.00561791

[node name="Score" type="Label" parent="Player"]
unique_name_in_owner = true
offset_left = 728.0
offset_top = -535.0
offset_right = 943.0
offset_bottom = -458.0
theme_override_font_sizes/font_size = 41
text = "Score : 0"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="GameOver" parent="." instance=ExtResource("4_7o7ka")]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
